--- a/scss/sections/_perks.scss
+++ b/scss/sections/_perks.scss
@@ -1,4 +1,7 @@
 .perks {
+  max-width: $bp-md;
+  margin: 0 auto;
+
   &__list {
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(26rem, 1fr));
